fix like button having main-color stroke
* Apply --main-text color to like button when not liked yet, for new design
* Add path of custom like to not-clicked like button

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -1366,7 +1366,11 @@
 	{
 		stroke: var(--main-text) !important;
 	}
-	ytd-menu-renderer.ytd-watch-metadata > div:nth-child(1) > segmented-like-dislike-button-view-model:nth-child(1) > yt-smartimation:nth-child(1) > div:nth-child(1) > div:nth-child(1) > like-button-view-model:nth-child(1) > toggle-button-view-model:nth-child(1) > button-view-model:nth-child(1) > button:nth-child(1) > div:nth-child(1) > yt-icon:nth-child(1) > yt-animated-icon:nth-child(1) > ytd-lottie-player:nth-child(1) > lottie-component:nth-child(1) > svg:nth-child(1) > g:nth-child(2) > g:nth-child(1) > g:nth-child(6) > g:nth-child(2) > path:nth-child(1)
+	ytd-menu-renderer.ytd-watch-metadata > div:nth-child(1) > segmented-like-dislike-button-view-model:nth-child(1) > yt-smartimation:nth-child(1) > div:nth-child(1) > div:nth-child(1) > like-button-view-model:nth-child(1) > toggle-button-view-model:nth-child(1) > button-view-model:nth-child(1) > button:nth-child(1) > div:nth-child(1) > yt-icon:nth-child(1) > yt-animated-icon:nth-child(1) > ytd-lottie-player:nth-child(1) > lottie-component:nth-child(1) > svg:nth-child(1) > g:nth-child(2) > g:nth-child(1) > g:nth-child(6) > g:nth-child(2) > path:nth-child(1),
+	/*2025-10-22*/
+	yt-animated-icon[animated-icon-type="LIKE"] > ytd-lottie-player > lottie-component > svg > g:nth-child(2) > g:nth-child(10) > path:nth-child(1),
+    /*Custom like*/
+	yt-animated-icon[animated-icon-type="CUSTOM_LIKE"] > ytd-lottie-player > lottie-component > svg > g:nth-child(2) > g:nth-child(1) > g:nth-child(4) > path:nth-child(1)
 	{
 		fill: var(--main-text) !important;
 	}
