--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.6.7
+@version 4.6.8
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -3211,6 +3211,13 @@
 	ytd-expander[should-use-number-of-lines][collapsed] > #content.ytd-expander
 	{
 		color: var(--dimmer-text) !important;
+	}
+	/*2025-12 thread indicator*/
+	.continuation.ytd-comment-view-model,
+	.ytSubThreadConnection, .ytSubThreadContinuation
+	{
+		border-color: var(--dimmer-text) !important;
+		opacity: 0.3;
 	}
 	/*read more*/
 	.more-button-exp.ytd-comment-renderer, .less-button-exp.ytd-comment-renderer
