--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.7.2
+@version 4.7.3
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -1353,8 +1353,15 @@
 		background: var(--second-background) !important;
 		color: var(--dimmer-text) !important;
 	}
+	#description-inner .style-scope.yt-formatted-string,
+	#description-inner #expand.ytd-text-inline-expander,
+	#description-inner.ytd-watch-metadata:hover .style-scope.yt-formatted-string
+	{
+		color: var(--main-text) !important;
+	}
 	.ytwHowThisWasMadeSectionViewModelBodyHeader,
-	.YtwHowThisWasMadeSectionViewModelBodyHeader
+	.YtwHowThisWasMadeSectionViewModelBodyHeader,
+	#description-inner.ytd-watch-metadata:hover #expand.ytd-text-inline-expander
 	{
 		color: var(--main-color) !important;
 	}
