--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -70,7 +70,7 @@
 
 @-moz-document regexp('https?:\\/\\/(?!gaming\\.)(?!music\\.)(?!tv\\.)(?!artists\\.)(?!studio\\.)(?!consent\\.).*youtube(?!kids\\.).*\\.com\\/(?!premium|howyoutubeworks).*$') {
 	/* Author     : Theme made by RaitaroH */
-	/* Co-authors : https://github.com/MechaLynx https://github.com/MaximeRF */
+	/* Co-authors : https://github.com/MechaLynx https://github.com/MaxRFDev */
 	/* Home       : https://github.com/RaitaroH/YouTube-DeepDark */
 	/* Licence    : GNU General Public License v3.0 */
 
